SD-019 請求書出力 新增字段<請求書明細番号>

--- a/sd-s4apps01/invoiceprint/ui5-local.yaml
+++ b/sd-s4apps01/invoiceprint/ui5-local.yaml
@@ -29,7 +29,7 @@ server:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
             destination: UMC_Dev_Customizing
-            authenticationType: BasicAuthentication
+            authenticationType: SAMLAssertion
     - name: sap-fe-mockserver
       beforeMiddleware: csp
       configuration:
