--- a/sd-s4apps01/invoiceprint/webapp/manifest.json
+++ b/sd-s4apps01/invoiceprint/webapp/manifest.json
@@ -205,6 +205,9 @@
                     },
                     "DataField::OverallSDProcessStatus": {
                       "width": "8rem"
+                    },
+                    "DataField::InvoiceItemNo": {
+                      "width": "8rem"
                     }
                   }
                 }
@@ -224,4 +227,3 @@
     "service": "sd-s4apps01"
   }
 }
-
