--- a/bi-s4apps01/recoveryupload/package.json
+++ b/bi-s4apps01/recoveryupload/package.json
@@ -12,7 +12,10 @@
   "devDependencies": {
     "@ui5/cli": "^3.0.0",
     "@sap/ux-ui5-tooling": "1",
-    "@sap-ux/ui5-middleware-fe-mockserver": "2"
+    "@sap-ux/ui5-middleware-fe-mockserver": "2",
+    "@sap/ui5-builder-webide-extension": "^1.1.9",
+    "ui5-task-zipper": "^3.1.3",
+    "mbt": "^1.2.27"
   },
   "scripts": {
     "start": "fiori run --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#birecoveryupload-display\"",
