BI-003 回収既存データ照会

--- a/bi-s4apps01/recoveryupload/ui5-mock.yaml
+++ b/bi-s4apps01/recoveryupload/ui5-mock.yaml
@@ -1,5 +1,3 @@
-# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json
-
 specVersion: "3.1"
 metadata:
   name: bi.recoveryupload
@@ -9,17 +7,17 @@ server:
     - name: fiori-tools-proxy
       afterMiddleware: compression
       configuration:
-        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
+        ignoreCertError: false
         ui5:
           path:
             - /resources
             - /test-resources
           url: https://ui5.sap.com
         backend:
-          - authenticationType: reentranceTicket # SAML support for vscode
-            path: /sap
-            url: https://my412552.s4hana.cloud.sap
+          - path: /sap
+            url: https://my412552-api.s4hana.cloud.sap
             destination: UMC_Dev_Customizing
+            authenticationType: SAMLAssertion
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
@@ -36,8 +34,10 @@ server:
       configuration:
         mountPath: /
         services:
-          - urlPath: /sap/opu/odata4/sap/zui_bi003_upload_o4/srvd/sap/zui_bi003_upload_o4/0001
+          - urlPath: /sap/opu/odata/sap/ZUI_BI003_UPLOAD_O2
             metadataPath: ./webapp/localService/metadata.xml
-            mockdataPath: ./webapp/localService/data
+            mockdataPath: ./webapp/localService/mockdata
             generateMockData: true
-        annotations: []
+        annotations:
+          - localPath: ./webapp/localService/mainService_Annotation.xml
+            urlPath: /destinations/UMC_Dev_Customizing/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='ZUI_BI003_UPLOAD_O2_VAN',Version='0001')/$value/
